--- a/template.html
+++ b/template.html
@@ -9,7 +9,14 @@
 
 <h1>The Results</h1>
 
-<div id="result_container">
+<div class="result_container">
+	<div class="result pillar" id="tests" 	style="height:[trHeight]px;"></div>
+	<div class="result pillar" id="fails" 	style="height:[flHeight]px;"></div>
+	<div class="result pillar" id="errors" 	style="height:[erHeight]px;"></div>
+	<div class="result pillar" id="skip" 	style="height:[skHeight]px;"></div>
+</div>
+
+<div class="result_container">
 	<div class="result">Tests run: [tr]</div>
 	<div class="result">Failures: [fl]</div>
 	<div class="result">Errors: [er]</div>
